syntax = "proto2";

package match;

option java_package = "com.oneroadtrip.matcher.proto";
option java_multiple_files = true;
option java_outer_classname = "LoginProtos";

import "common.proto";

message LoginRequest {
  // For tradition login
  optional string username = 2;
  optional string password = 3;
}

message LoginResponse {
  optional Status status = 1 [default = SUCCESS];
  optional string token = 2;
}
